// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        This step is for Zion
      </Text>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
                "paddingHorizontal": 32,
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                This description is for Zion
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD TO MY STEPS
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders correctly for me 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        esse repellat quisquam
      </Text>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
                "paddingHorizontal": 32,
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                recusandae alias consequuntur
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD TO MY STEPS
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders correctly in onboarding 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "backgroundColor": "transparent",
              "borderRadius": 0,
              "borderWidth": 0,
              "height": 60,
              "justifyContent": "center",
              "margin": 0,
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            }
          }
          testID="BackButton"
        >
          <SvgMock
            color="#B4B6BA"
          />
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": undefined,
      }
    }
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "paddingHorizontal": 32,
              "paddingTop": 13,
            },
          ]
        }
      >
        <SvgMock
          color="#B4B6BA"
          height={24}
        />
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Bold",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 1,
                "lineHeight": 20,
                "textAlignVertical": "center",
                "textTransform": "uppercase",
              },
              Object {
                "color": "#B4B6BA",
                "paddingLeft": 4,
              },
              undefined,
            ]
          }
        >
          CARE STEP
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 32,
            "fontStyle": "normal",
            "lineHeight": 38,
            "marginHorizontal": 32,
            "marginVertical": 16,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        esse repellat quisquam
      </Text>
      <View
        style={
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#ECEEF2",
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 0,
            "paddingTop": 26,
          }
        }
      >
        <View
          style={Object {}}
        >
          <View
            style={
              Object {
                "marginVertical": 10,
                "paddingHorizontal": 32,
              }
            }
          >
            <Text
              style={Object {}}
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#505256",
                      "fontFamily": "SourceSansPro-Regular",
                      "fontSize": 16,
                      "fontStyle": "normal",
                      "lineHeight": 24,
                      "textAlignVertical": "center",
                      "textTransform": "none",
                    },
                    Object {},
                  ]
                }
              >
                recusandae alias consequuntur
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD TO MY STEPS
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;
